--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@react-native-google-signin/google-signin": "^9.0.2",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.7",
+    "libphonenumber-js": "^1.10.28",
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.71.7",
     "react-native-config": "^1.5.0",
     "react-native-currency-input": "^1.1.0",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-mask-input": "^1.2.3",
     "react-native-safe-area-context": "^4.5.1",
     "react-native-vector-icons": "^9.2.0"
   },
