--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-firebase/auth": "^17.4.3",
     "@react-native-firebase/database": "^12.3.0",
     "@react-native-google-signin/google-signin": "^9.0.2",
+    "@react-navigation/native": "^6.1.6",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.7",
     "moment": "^2.29.4",
@@ -22,6 +23,7 @@
     "react-native-config": "^1.5.0",
     "react-native-currency-input": "^1.1.0",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-paper": "^5.7.2",
     "react-native-safe-area-context": "^4.5.1",
     "react-native-vector-icons": "^9.2.0"
   },
