--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native": "^6.1.6",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.7",
+    "date-fns": "^2.30.0",
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.71.7",
